Add: activeTab & chrome.tabs.create

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,8 @@
   },
   "permissions": [
     "storage",
-    "contextMenus"
+    "contextMenus",
+    "activeTab"
   ],
   "content_scripts": [
     {
